# mindcraft

./: README.md  package_bk.json
crew/:  README.md
crew/skill-dev-crew/: pyproject.toml
crew/skill-dev-crew/src/skill_dev_crew/: crew.py  main.py
crew/skill-dev-crew/src/skill_dev_crew/config/: agents.yaml  skilldesign.yaml  tasks.yaml
profiles/defaults/: _default.json
src/agent/: cosyvoice-client.js  speak.js
src/agent/commands/: actions.js  queries.js
src/models/: prompter.js  qwen.js
